--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
         "gulp-typescript": "2.13.6",
         "gulp-util": "^3.0.7",
         "merge2": "^1.0.2"
+    },
+    "typescript": {
+        "definitions": 
+        [
+            "js/main/index.d.ts"
+        ]
     }
 }
