--- a/package.json
+++ b/package.json
@@ -17,10 +17,5 @@
         "merge2": "^1.0.2"
     },
     "main" : "js/main/index.js",
-    "typescript": {
-        "definitions": 
-        [
-            "js/main/index.d.ts"
-        ]
-    }
+    "typings" : "js/main/index.d.ts" 
 }
