--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
     "name": "tsmatchers",
     "version": "4.0.2",
     "devDependencies": {
-        "@types/jest": "^24.9.0",
-        "jest": "^24.9.0",
-        "ts-jest": "^24.3.0",
-        "typescript": "^3.7.5"
+        "@babel/core": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-typescript": "^7.15.0",
+        "@types/jest": "^27.0.2",
+        "babel-jest": "^27.3.1",
+        "jest": "^27.3.1",
+        "ts-node": "^10.3.0",
+        "tslib": "^2.0.0",
+        "typescript": "^4.0.0"
     },
     "scripts": {
         "build": "rm -fR js && tsc",
@@ -20,17 +25,5 @@
     "typings": "js/index.d.ts",
     "files": [
         "js/**/*"
-    ],
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "node",
-        "globals": {
-            "ts-jest": {
-                "diagnostics": false
-            }
-        },
-        "testMatch": [
-            "**/__tests__/*.(ts|tsx|js)"
-        ]
-    }
+    ]
 }
