--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
     "name": "tsmatchers",
-    "version": "5.0.3",
+    "version": "6.0.1",
     "devDependencies": {
         "@babel/core": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
         "@babel/preset-typescript": "^7.18.6",
-        "@types/jest": "^28.1.7",
-        "babel-jest": "^28.1.3",
-        "jest": "^28.1.3",
+        "@types/jest": "^29.0.0",
+        "babel-jest": "^29.0.0",
+        "jest": "^29.0.0",
+        "ts-jest": "^29.4.1",
         "ts-node": "^10.9.1",
         "tslib": "^2.4.0",
         "typescript": "^4.7.4"
     },
+    "type": "module",
     "scripts": {
-        "build": "rm -fR js && tsc",
-        "test": "jest",
+        "build": "rm -fR dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && node scripts/fix-esm-imports.js && node scripts/fix-package-json.js",
+        "test": "jest && node test-cjs.cjs && node test-esm.mjs",
         "watch": "jest --watchAll"
     },
     "license": "ASL 2.0",
@@ -22,9 +24,22 @@
         "type": "git",
         "url": "git@github.com:SimoneGianni/tsMatchers.git"
     },
-    "main": "js/index.js",
-    "typings": "js/index.d.ts",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/cjs/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./dist/cjs/index.js",
+            "import": "./dist/esm/index.js",
+            "types": "./dist/cjs/index.d.ts"
+        },
+        "./internals": {
+            "require": "./dist/cjs/tsMatchers.js",
+            "import": "./dist/esm/tsMatchers.js",
+            "types": "./dist/cjs/tsMatchers.d.ts"
+        }
+    },
     "files": [
-        "js/**/*"
+        "dist/**/*"
     ]
 }
